@startuml

title __POWERHOUSESERVER's Class Diagram__\n

  namespace all {
    class all.AddToZoneCommand {
    }
  }
  

  namespace all {
    abstract class all.Command {
    }
  }
  

  namespace all {
    abstract class all.Component {
    }
  }
  

  namespace all {
    class all.ConfigReader {
    }
  }
  

  namespace all {
    class all.ListOutletsCommand {
    }
  }
  

  namespace all {
    class all.ListSchedulesCommand {
    }
  }
  

  namespace all {
    class all.ListZonesCommand {
    }
  }
  

  namespace all {
    class all.NewOutletCommand {
    }
  }
  

  namespace all {
    class all.NewScheduleCommand {
    }
  }
  

  namespace all {
    class all.NewZoneCommand {
    }
  }
  

  namespace all {
    class all.Outlet {
    }
  }
  

  namespace all {
    class all.OutletScheduleToggleCommand {
    }
  }
  

  namespace all {
    class all.OutletSchedulingCommand {
    }
  }
  

  namespace all {
    class all.OutletsCommand {
    }
  }
  

  namespace all {
    class all.PowerConsumptionCommand {
    }
  }
  

  namespace all {
    class all.PowerHouseServer {
    }
  }
  

  namespace all {
    class all.PowerOffOutletCommand {
    }
  }
  

  namespace all {
    class all.PowerOffZoneCommand {
    }
  }
  

  namespace all {
    class all.PowerOnOutletCommand {
    }
  }
  

  namespace all {
    class all.PowerOnZoneCommand {
    }
  }
  

  namespace all {
    class all.RootCommand {
    }
  }
  

  namespace all {
    interface all.Runnable {
    }
  }
  

  namespace all {
    class all.Schedule {
    }
  }
  

  namespace all {
    class all.ScheduleCommand {
    }
  }
  

  namespace all {
    class all.ToggleOutletCommand {
    }
  }
  

  namespace all {
    class all.ToggleZoneCommand {
    }
  }
  

  namespace all {
    class all.UsageAverageCommand {
    }
  }
  

  namespace all {
    class all.UsageTodayCommand {
    }
  }
  

  namespace all {
    class all.UsageTotalCommand {
    }
  }
  

  namespace all {
    class all.ZoneCommand {
    }
  }
  

  namespace all {
    class all.ZoneScheduleToggleCommand {
    }
  }
  

  namespace all {
    class all.ZoneSchedulingCommand {
    }
  }
  

  all.AddToZoneCommand -up-|> all.Command
  all.Command .up.|> all.Runnable
  all.ListOutletsCommand -up-|> all.Command
  all.ListSchedulesCommand -up-|> all.Command
  all.ListZonesCommand -up-|> all.Command
  all.NewOutletCommand -up-|> all.Command
  all.NewScheduleCommand -up-|> all.Command
  all.NewZoneCommand -up-|> all.Command
  all.Outlet -up-|> all.Component
  all.OutletScheduleToggleCommand -up-|> all.Command
  all.OutletSchedulingCommand -up-|> all.Command
  all.OutletsCommand -up-|> all.Command
  all.PowerConsumptionCommand -up-|> all.Command
  all.PowerOffOutletCommand -up-|> all.Command
  all.PowerOffZoneCommand -up-|> all.Command
  all.PowerOnOutletCommand -up-|> all.Command
  all.PowerOnZoneCommand -up-|> all.Command
  all.RootCommand -up-|> all.Command
  all.ScheduleCommand -up-|> all.Command
  all.ToggleOutletCommand -up-|> all.Command
  all.ToggleZoneCommand -up-|> all.Command
  all.UsageAverageCommand -up-|> all.Command
  all.UsageTodayCommand -up-|> all.Command
  all.UsageTotalCommand -up-|> all.Command
  all.ZoneCommand -up-|> all.Command
  all.ZoneScheduleToggleCommand -up-|> all.Command
  all.ZoneSchedulingCommand -up-|> all.Command


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
